--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -119,3 +119,31 @@
 .videobtn:hover {
   opacity: 0.6;
 }
+
+.search {
+  margin-left: 10vw;
+  width: 28vw;
+}
+
+.search-input {
+  width: 100%;
+  background-color: #FFFFFF;
+  border: 1px solid #F3F3F3;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.search ul {
+  padding: 0.5px;
+  border-radius: 10px;
+  width: 100%;
+  background-color: #FFFFFF;
+}
+
+.search ul li {
+  width: 100%;
+  padding: 0 10px;
+  background-color: #FFFFFF;
+  border-bottom: 1px solid #F3F3F3;
+  font-size: 0.8rem;
+}
