--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -109,6 +109,7 @@
   color: #FFFFFF;
   margin-right: 4vw;
   margin-top: -10px;
+  font-size: 0.8rem;
 }
 
 .videobtn img{
@@ -122,7 +123,7 @@
 
 .search {
   margin-left: 10vw;
-  width: 28vw;
+  width: 25vw;
 }
 
 .search-input {
@@ -146,4 +147,43 @@
   background-color: #FFFFFF;
   border-bottom: 1px solid #F3F3F3;
   font-size: 0.8rem;
+}
+
+.search ul li:nth-last-child() {
+  border-bottom: none;
+}
+
+.details {
+  text-align: left;
+}
+
+.name {
+  font-size: 0.8rem;
+  font-weight: bolder;
+}
+
+.city {
+  font-size: 0.6rem;
+  font-weight: bolder;
+}
+
+.qualification {
+  font-size: 0.6rem;
+}
+
+.top-candidate {
+  font-size: 0.5rem;
+  color: #1D4ED8;
+}
+
+.classification {
+  gap: 10px;
+}
+
+.classification div{
+  background-color: #F3FAFC;
+  color: #037092;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 0.6rem;
 }
