--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -122,7 +122,7 @@
 }
 
 .search {
-  margin-left: 10vw;
+  margin-left: 12vw;
   width: 25vw;
 }
 
@@ -149,8 +149,26 @@
   font-size: 0.8rem;
 }
 
+.search ul li:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
 .search ul li:nth-last-child() {
   border-bottom: none;
+}
+
+.details-container {
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 16px;
+  margin-left: 2vw;
+  width: 62vw;
+}
+
+.details-container li {
+  border-bottom: 1px solid #EEEEEE;
+  padding-bottom: 20px;
 }
 
 .details {
@@ -186,4 +204,17 @@
   padding: 5px;
   border-radius: 5px;
   font-size: 0.6rem;
+}
+
+.candidate-details {
+  gap: 2vw;
+  align-items: center;
+}
+
+.check{
+  width: 16px;
+  height: 16px;
+  background-color: #FFFFFF;
+  border: 1px solid #8492A7;
+  border-radius: 1px;
 }
