--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
   left: 0;
   height: 100%;
   background-color: #FFFFFF;
-  padding: 10px;
+  padding: 0px 10px;
 }
 
 .navbar ul {
@@ -16,6 +16,11 @@
   margin: 10px 0;
   color: #0B0B0B;
   cursor: pointer;
+}
+
+
+.navbar ul li:nth-last-child(2) {
+  margin-top: 40px;
 }
 
 .navbar ul li img{
