--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -121,6 +121,14 @@
   opacity: 0.6;
 }
 
+.search-div {
+  width: 100%;
+  background-color: #FFFFFF;
+  border: 1px solid #F3F3F3;
+  padding: 5px;
+  border-radius: 10px;
+}
+
 .search {
   margin-left: 12vw;
   width: 25vw;
@@ -129,8 +137,8 @@
 .search-input {
   width: 100%;
   background-color: #FFFFFF;
-  border: 1px solid #F3F3F3;
-  padding: 10px;
+  border: none;
+  padding: 5px;
   border-radius: 10px;
 }
 
