Fix CSS linter errors

--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -19,7 +19,7 @@
 }
 
 .dropbtn {
-  background-color: #FFFFFF;
+  background-color: #fff;
   border: none;
   width: 18vw;
   border-radius: 20px;
@@ -29,8 +29,8 @@
 }
 
 .dropbtn:hover {
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .dropdown {
@@ -41,12 +41,12 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #FFFFFF;
+  background-color: #fff;
   width: 18vw;
-  border-top: 2px solid #EDF2FF;
+  border-top: 2px solid #edf2ff;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
   z-index: 1;
 }
 
@@ -58,13 +58,18 @@
   padding: 5px 18px;
   text-decoration: none;
   display: block;
-  border-bottom: 2px solid #F9FAFF;
-  font-size: 0.8rem
+  border-bottom: 2px solid #f9faff;
+  font-size: 0.8rem;
 }
 
 .dropdown-content a:hover {
-  color: #1D4ED8;
-  background-color: #EDF2FF;
+  color: #1d4ed8;
+  background-color: #edf2ff;
+}
+
+.dropdown-content a div:hover {
+  color: #1d4ed8;
+  background-color: #edf2ff;
 }
 
 .dropdown-content a:last-child {
@@ -75,13 +80,13 @@
   display: flex;
   align-items: center;
   padding: 8px;
-  background-color: #F9FAFF;
+  background-color: #f9faff;
   border-radius: 12px;
   font-size: 0.6rem;
 }
 
 .category-number:hover {
-  background-color: #D1DDFF;
+  background-color: #d1ddff;
 }
 
 .heading-icons {
@@ -90,31 +95,31 @@
   margin-right: -10vw;
 }
 
-.heading-icons img{
+.heading-icons img {
   margin-left: -42px;
 }
 
-.heading-icons img:hover{
+.videobtn img {
+  border-left: 1px solid #f9faff;
+  margin-right: -5px;
+}
+
+.heading-icons img:hover {
   opacity: 0.6;
 }
 
 .videobtn {
   align-items: center;
-  background-color: #1D5ECD;
+  background-color: #1d5ecd;
   border: none;
   width: 18vw;
   height: 40px;
   border-radius: 10px;
   padding: 5px 15px;
-  color: #FFFFFF;
+  color: #fff;
   margin-right: 4vw;
   margin-top: -10px;
   font-size: 0.8rem;
-}
-
-.videobtn img{
-  border-left: 1px solid #F9FAFF;
-  margin-right: -5px;
 }
 
 .videobtn:hover {
@@ -123,8 +128,8 @@
 
 .search-div {
   width: 100%;
-  background-color: #FFFFFF;
-  border: 1px solid #F3F3F3;
+  background-color: #fff;
+  border: 1px solid #f3f3f3;
   padding: 5px;
   border-radius: 10px;
 }
@@ -136,7 +141,7 @@
 
 .search-input {
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: #fff;
   border: none;
   padding: 5px;
   border-radius: 10px;
@@ -146,15 +151,24 @@
   padding: 0.5px;
   border-radius: 10px;
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: #fff;
+}
+
+.details-container li {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
 }
 
 .search ul li {
   width: 100%;
   padding: 0 10px;
-  background-color: #FFFFFF;
-  border-bottom: 1px solid #F3F3F3;
+  background-color: #fff;
+  border-bottom: 1px solid #f3f3f3;
   font-size: 0.8rem;
+}
+
+.details-container li:last-child {
+  border-bottom: none;
 }
 
 .search ul li:hover {
@@ -184,32 +198,23 @@
 
 .line {
   height: 14px;
-  border: 1px solid #F3F3F4;
+  border: 1px solid #f3f3f4;
 }
 
 .value {
-  background-color: #F3F3F4;
+  background-color: #f3f3f4;
   padding: 4px;
   font-size: 0.5rem;
   border-radius: 10px;
 }
 
 .details-container {
-  background-color: #FFFFFF;
+  background-color: #fff;
   border-radius: 14px;
   padding: 16px;
   margin-left: 2vw;
   width: 62vw;
   margin-top: -1px;
-}
-
-.details-container li {
-  border-bottom: 1px solid #EEEEEE;
-  padding-bottom: 20px;
-}
-
-.details-container li:last-child {
-  border-bottom: none;
 }
 
 .details {
@@ -232,15 +237,15 @@
 
 .top-candidate {
   font-size: 0.5rem;
-  color: #1D4ED8;
+  color: #1d4ed8;
 }
 
 .classification {
   gap: 10px;
 }
 
-.classification div{
-  background-color: #F3FAFC;
+.classification div {
+  background-color: #f3fafc;
   color: #037092;
   padding: 5px;
   border-radius: 5px;
@@ -252,10 +257,10 @@
   align-items: center;
 }
 
-.check{
+.check {
   width: 16px;
   height: 16px;
-  background-color: #FFFFFF;
-  border: 1px solid #8492A7;
+  background-color: #fff;
+  border: 1px solid #8492a7;
   border-radius: 1px;
 }
