--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,12 @@
 * {
   box-sizing: border-box;
-  color: #0B0B0B;
+  color: #0b0b0b;
   font-family: 'poppins', sans-serif;
 }
 
 body {
   margin: 0;
-  background-color: #F9FAFF;
+  background-color: #f9faff;
 }
 
 /* UTILITY */
@@ -31,13 +31,8 @@ body {
   justify-content: center;
 }
 
-align-center {
-  display: flex;
-  align-items: center;
-}
-
-.blue  {
-  color: #1D4ED8;
+.blue {
+  color: #1d4ed8;
 }
 
 .medium-text {
